--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -42,7 +42,8 @@ RUN pip3 install --no-cache-dir --break-system-packages \
     plotly \
     pyarrow \
     clickhouse-driver \
-    clickhouse-connect
+    clickhouse-connect \
+    poppler-utils
 
 # Instalar pacotes R necessários
 RUN R -e "install.packages(c('IRkernel', 'languageserver'), repos='https://cloud.r-project.org', Ncpus=2)"
